# powermon

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  celery_app.py  dashboard.py  docker-compose.yml  justfile  main.py  manage.py  pyproject.toml  run.py
app/: __init__.py  models.py  tasks.py
app/api/: routes.py
app/main/: routes.py
app/services/: chart_generator.py  switch_monitor.py
app/static/css/: dashboard.css
app/static/js/: dashboard.js
app/templates/: add_switch.html  base.html  dashboard.html  outages.html  switches.html
