[project]
name = "powermon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.0",
    "dash>=3.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff.lint]
# Ignore E402 for Flask blueprint pattern
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"app/*/__init__.py" = ["F401", "E402"]
